# RESUMESCREENER

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ResumeScreener.spec  SECURITY.md  SUPPORT.md  app.py  build_executable.py  launcher.py  pyproject.toml  requirements.txt  run_resume_screener.bat  run_resume_screener.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
data/: jd.txt  rubric.txt  rubric_sample.txt
src/: cli.py  contact_norm.py  parser.py  prefilter.py  ranker.py  rubric_parser.py  scorer.py  utils.py
ui/: __init__.py  components.py  processor.py  steps.py  utils.py
